跳转进新闻界面有问题

--- a/app/src/main/res/layout/layout_news.xml
+++ b/app/src/main/res/layout/layout_news.xml
@@ -26,7 +26,8 @@
                 android:id="@+id/newsimage"
                 android:layout_marginTop="25dp"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
+                android:layout_height="100dp"
+                android:scaleType="fitXY"/>
             <TextView
                 android:id="@+id/newstitle"
                 android:layout_toRightOf="@id/newsimage"
